--- a/front/frontAD512Bank/src/app/result/result.component.css
+++ b/front/frontAD512Bank/src/app/result/result.component.css
@@ -52,11 +52,9 @@
 
 @media (max-width:1000px){
 
-    #person-container {
-        width: 100%!important;
-    }
+    
 
-    #person-details {
+    #person-details, #person-container {
         width: 100%!important;
     }
 
@@ -82,7 +80,6 @@
 
 #results-container {
     width: 100%;
-    min-height: 50vw;
     margin: 0 auto;
     padding: 40px;
     display: flex;
@@ -142,7 +139,6 @@
 
 #selection-person {
     opacity: 0;
-    position: relative;
     z-index: 1;
     border-radius: 20px;
 
@@ -165,8 +161,10 @@
 
 
 #person-details {
+   
     padding-top: 100px;
-
+    width: 800px;
+    height: 1000px;
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
